--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "serve -s ./dist -p 3000"
+    "start": "./node_modules/.bin/webpack-dev-server"
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
+    "babel-loader": "6.2.5",
     "babel-preset-latest": "6.16.0",
     "babel-preset-react": "6.16.0",
-    "babel-preset-stage-0": "6.16.0"
+    "babel-preset-stage-0": "6.16.0",
+    "webpack": "1.13.3",
+    "webpack-dev-server": "1.16.2"
   }
 }
